updated borders to match hyprland

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -32,17 +32,17 @@ window#waybar.hidden {
 /* This section can be use if you want to separate waybar modules */
 .modules-left, .modules-center, .modules-right {
 	background: @theme_base_color; 
- 	border: 0.5px solid @overlay0;
+ 	border: 2px solid rgba(203, 166, 247, 0.67);
 	padding-top: 2px;
 	padding-bottom: 2px;
 	padding-right: 4px;
 	padding-left: 4px;
-	border-radius: 10px;
+	border-radius: 10ipx;
 
 } 
 
 .modules-left, .modules-right {
-  	border: 1px solid @mauve;
+  	border: 2px solid rgba(203, 166, 247, 0.67);
 	padding-top: 2px;
 	padding-bottom: 2px;
 	padding-right: 4px;
