--- a/waybar/style.css
+++ b/waybar/style.css
@@ -37,7 +37,7 @@ window#waybar.hidden {
 	padding-bottom: 2px;
 	padding-right: 4px;
 	padding-left: 4px;
-	border-radius: 10ipx;
+	border-radius: 10px;
 
 } 
 
