changed color of pacman

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -192,7 +192,7 @@ window#waybar.hidden {
 }
 
 #workspaces button.active {
-	color: @peach;
+	color: @mauve;
   	border-radius: 10px;
     padding-left: 8px;
     padding-right: 8px;
